swagger re-organized, admincontroller deleted, user routes fixed
